# Village-Web-Scrapper

./: data.json  main.ipynb  main.py  pyproject.toml  test.py
